--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
-    "vite": "^7.0.0"
+  "vite": "6.0.0"
   },
   "homepage": "https://tallarabguy.github.io/mosaic.aa.game"
 }
